--- a/web/web-admin/src/main/resources/application.yml
+++ b/web/web-admin/src/main/resources/application.yml
@@ -19,3 +19,6 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    db-config:
+      logic-delete-field: isDeleted
